--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -83,6 +83,11 @@ header a {
 	border-radius: 5px;
 }
 
+header a:hover {
+	color: black;
+	text-decoration: none;
+}
+
 
 /* Nagyfelbotású telefon fektetett módban. pl. iphone X*/
 @media (min-width: 812px) and (orientation:landscape) {
@@ -120,11 +125,19 @@ header a {
 
 /* Fektetett módban egymás mellé igazítjuk a diveket*/
 @media (min-width: 667px) and (orientation:landscape) {
-    .col-md-6 {
-        max-width: 50%;
-    }
+  .col-md-6 {
+      max-width: 50%;
+  }
 }
 
+
+@media (min-width: 1280px) {
+	#main-content div {
+		max-width: 35%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
 
 
 /* =================== BANNER =================== */
@@ -158,6 +171,10 @@ header a {
 	margin: 1rem 0;
 	padding: 0.8rem 2rem;
 	border-radius: 5px;
+}
+
+#banner a:hover {
+	text-decoration: none;
 }
 
 #banner h1 {
